<resources>
    <string name="app_name">我要当老板</string>
    <string name="minnum">最少选择一张图片</string>
    <string name="maxnum">最多选择%1$d张图片</string>
    <string name="all_images">所有图片</string>
    <string name="sd_disable">SD卡不可用</string>
    <string name="image">图片</string>
    <string name="takephoto">拍照</string>
    <string name="confirm_format">%1$s(%2$d/%3$d)</string>
    <string name="confirm">确定</string>
    <string name="open_camera_failure">打开相机失败</string>
    <string name="permission_storage_denied">请打开存储空间权限</string>
    <string name="permission_camera_denied">请打开相关权限</string>
    <string name="login_phone">手机号码</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="login_by_password">登录</string>
    <string name="login_by_sms">短信快速登录</string>
    <string name="login_phone_hint">请输入手机号码</string>
    <string name="login_phone_true_hint">请输入真实的手机号</string>
    <string name="login_pwd_hint">请输入您的登录密码</string>
    <string name="payment_pwd_hint">请输入支付密码</string>
    <string name="login_sms_hint">请输入验证码</string>
    <string name="login_sms_get">获取验证码</string>
    <string name="login_account">手机号</string>
    <string name="login_pwd">密码</string>
    <string name="login_confirm_pwd">确认密码</string>
    <string name="login_sms">验证码</string>
    <string name="login_sms_hint1">请输入短信验证码</string>
    <string name="forget_login_pwd">忘记密码?</string>
    <string name="forget_login_pwd1">确认修改</string>
    <string name="register_new_account">注册</string>
    <string name="login_by_weixin">使用微信登录</string>
    <string name="register_by_quick">快速注册</string>
    <string name="register_by_set_pwd">设置登录密码</string>
    <string name="dialog_captcha_title">请输入图形验证码</string>
    <string name="register_by_set_pwd_hint">请设置密码</string>
    <string name="register_by_set_pwd_length_less_hint">密码长度至少6位</string>
    <string name="register_confirm_by_set_pwd_hint">请再次输入登录密码</string>
    <string name="register_confirm_by_set_payment_pwd_hint">请再次输入支付密码</string>
    <string name="register_pwd_error">两次密码不一致</string>
    <string name="register_success">恭喜您，注册成功</string>
    <string name="find_password_success">恭喜您，密码重置成功</string>
    <string name="bind_success">恭喜您，手机绑定成功</string>
    <string name="security_pwd_settings_title">密码安全设置</string>
    <string name="security_login_pwd_edit">修改登录密码</string>
    <string name="security_pay_pwd_edit">修改支付密码</string>
    <string name="security_pay_pwd_forget">忘记支付密码</string>
    <string name="security_login_pwd_save">保存新密码</string>
    <string name="security_pay_pwd_save">保存新密码</string>
    <string name="security_pay_pwd_reset_tip">您正在进行重置支付密码的操作，修改成功后，BTZ钱包也会同步修改。</string>
    <string name="security_login_pwd_reset_tip">您正在进行重置登录密码的操作，修改成功后，BTZ钱包也会同步修改。</string>
    <string name="security_edit_password_send_sms_tip">已向手机号码 %1$s 发送短信验证码，请注意查收</string>
    <string name="security_edit_password_setting_tip">请为您的账号 %1$s 设置一个新密码</string>
    <string name="settings_title">设置</string>
    <string name="settings_language">多语言设置</string>
    <string name="settings_message">通知设置</string>
    <string name="settings_clear_cache">清除缓存</string>
    <string name="settings_logout">退出登录</string>
    <string name="language_zh">中文</string>
    <string name="language_en">English</string>
    <string name="disconnect_network_title">请检查您的网络是否可用</string>
    <string name="click_try_again">点击重试</string>
    <string name="next_btn">下一步</string>
    <string name="confirm_btn">确定</string>
    <string name="cancel_btn">取消</string>
    <string name="select_photo">相册</string>
    <string name="take_photo">拍照</string>
    <string name="setting">设置</string>
    <string name="get_sms_again_hint">%1$s秒后可重发</string>
    <string name="game_time">还有%1$s秒结束</string>
    <string name="ad_time">跳过(%1$sS)</string>
    <string name="ad_time2">倒计时（%1$sS）</string>
    <string name="year_month_title">%1$s 年 %2$s 月</string>
    <string name="bind_confirm">确认绑定</string>
    <string name="reset_password1">重置密码</string>
    <string name="error_404">接口地址异常</string>
    <string name="error_403">服务器拒绝请求</string>
    <string name="error_500">服务器异常</string>
    <string name="error_504">请求超时</string>
    <string name="perm_tip">
        当前应用缺少必要权限。\n请点击"设置"-"权限"-打开所需权限。\n最后点击两次后退按钮，即可返回。
    </string>
    <string name="ask_again">请给予应用必要权限，让程序可正常工作。</string>
    <string name="ask_camera">应用获取相机权限,是用来识别二维码,请授权。</string>
    <string name="set_password_interrupt_dialog_tip">您正在进行重置密码操作,确定要退出吗?</string>
    <string name="login_pwd_reset_success">密码重置成功,请重新登录</string>
    <string name="payment_pwd_reset_success">支付密码重置成功</string>
    <string name="dialog_server_error">服务暂不可用,请稍后再试</string>
    <string name="chasing_amount">书架%1$s本</string>
    <string name="download.chapter_scope">(%1$d-%2$d章)</string>
    <string name="footer_behavior">com.lianzai.reader.view.behavior.BottomBehavior</string>
    <string name="title_behavior">com.lianzai.reader.view.behavior.TitleBehavior</string>
    <string-array name="sort_array">
        <item>按更新时间排序</item>
        <item>按总字数排序</item>
        <item>按关注时间排序</item>
        <item>按关注人数排序</item>
    </string-array>
    <string-array name="search_sort_array">
        <item>默认排序</item>
        <item>最新更新</item>
        <item>收藏最多</item>
        <item>总字数</item>
    </string-array>
    <string name="lianzai_book_store">连载书城</string>
    <string name="all_category">全部分类</string>
    <string name="editor_recommend">编辑推荐</string>
    <string name="editor_recommend_reason">最新上架的书籍推荐</string>
    <string name="home_tab">首页</string>
    <string name="bookshelf_tab">书架</string>
    <string name="mine_tab">我的</string>
    <string name="find_tab">我的</string>
    <string name="setting_tab">设置选项</string>
    <string name="reset_login_pwd_tab">重置登录密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="confirm_logout">确认退出</string>
    <string name="recommend">为您推荐</string>
    <string name="mine_attention">我的关注</string>
    <string name="search_book_hint">搜索你想要找的小说</string>
    <string name="cancel">取消</string>
    <string name="hot_search">热门搜索</string>
    <string name="bar_discuss">书吧讨论</string>
    <string name="book_category">书籍目录</string>
    <string name="book_description">本书简介</string>
    <string name="already_paid_attention">已关注</string>
    <string name="attention_book_bar">关注贴吧</string>
    <string name="open_book">直接阅读</string>
    <string name="post_title">在此输入标题</string>
    <string name="post_content">在此输入帖子内容</string>
    <string name="post">发表</string>
    <string name="read_book_category">目录</string>
    <string name="read_book_progress">进度</string>
    <string name="read_book_show">显示</string>
    <string name="read_book_font">字体</string>
    <string name="read_book_last_chapter">上一张</string>
    <string name="read_book_next_chapter">下一张</string>
    <string name="read_book_simulation">仿真</string>
    <string name="read_book_cover">覆盖</string>
    <string name="read_book_roll">滚动</string>
    <string name="read_book_none">无</string>
    <string name="share_circle_of_friends">分享到朋友圈</string>
    <string name="share_wechat_friends">分享给微信好友</string>
    <string name="share_copy_url">复制分享链接</string>
    <string name="share">分享</string>
    <string name="not_login_tip">您还未登录</string>
    <string name="not_login_tip1">登录后才能查看相关内容</string>
    <string name="not_login_tip2">去登录</string>
    <string-array name="bg_colors">
        <item >#FFFFFF</item>
        <item >#F7F2E5</item>
        <item >#B9E0C3</item>
        <item >#E6D3A3</item>
        <item >#191919</item>
    </string-array>
    <string-array name="adBlockUrl">
        <item>ubmcmm.baidustatic.com</item>
        <item>gss1.bdstatic.com/</item>
        <item>cpro2.baidustatic.com</item>
        <item>cpro.baidustatic.com</item>
        <item>lianmeng.360.cn</item>
        <item>nsclick.baidu.com</item>
        <item>caclick.baidu.com/</item>
        <item>jieaogd.com</item>
        <item>publish-pic-cpu.baidu.com/</item>
        <item>cpro.baidustatic.com/</item>
        <item>hao61.net/</item>
        <item>cpu.baidu.com/</item>
        <item>pos.baidu.com</item>
        <item>cbjs.baidu.com</item>
        <item>cpro.baidu.com</item>
        <item>images.sohu.com/cs/jsfile/js/c.js</item>
        <item>union.sogou.com/</item>
        <item>sogou.com/</item>
        <item>5txs.cn/</item>
        <item>liuzhi520.com/</item>
        <item>yhzm.cc/</item>
        <item>jieaogd.com</item>
        <item>a.baidu.com</item>
        <item>c.baidu.com</item>
        <item>mlnbike.com</item>
        <item>alipays://platformapi</item>
        <item>alipay.com/</item>
        <item>jieaogd.com</item>
        <item>vipshop.com</item>
</string-array>
    <string name="bind_account">账号与绑定设置</string>
    <string name="bind_account_phone">绑定手机号</string>
    <string name="bind_account_btn">绑定手机号</string>
    <string name="bind_account_tip">绑定各个平台的账号后,可以用他们来登录连载神器</string>
    <string name="empty_message_record">暂无通知记录</string>
    <string name="empty_notice_record">暂无公告记录</string>
    <string name="real_name_certified_tip">您正在进行实名认证操作，</string>
    <string name="real_name_certified_tip1">请确认是您本人，验证完后不可修改。</string>
    <string name="real_name">真实姓名</string>
    <string name="real_name_hint">请输入您的真实姓名</string>
    <string name="id_card">身份证</string>
    <string name="id_card_hint">请输入您的身份证号码</string>
    <string name="id_card_hint1">请输入有效的身份证号码</string>
    <string name="passport_hint">请输入您的护照号码</string>
    <string name="change_to_abroad">护照认证</string>
    <string name="change_to_home">身份证认证</string>
    <string name="change_to_abroad_success">已切换为护照验证模式</string>
    <string name="change_to_home_success">已切换为身份证验证模式</string>
    <string name="passport">护照</string>
    <string name="upload_photo_tip">请上传   </string>
    <string name="upload_photo_tip1">  的身份证正反面照以及手持身份证正面照</string>
    <string name="upload_photo_tip2">  的护照正面照以及手持护照正面照</string>
    <string name="id_card_positive_title">身份证正面照</string>
    <string name="passport_positive_title">护照正面照</string>
    <string name="id_card_positive_des">请用手机横向拍照，保证图片正常显示，确保证件完整清晰无遮挡。</string>
    <string name="id_card_opposite_title">身份证反面照</string>
    <string name="id_card_opposite_des">请用手机横向拍照，必须能够看清楚签发机关和有效日期，有效期至少保持一个月。</string>
    <string name="id_card_hand_title">手持身份证正面照</string>
    <string name="passport_hand_title">手持护照正面照</string>
    <string name="id_card_hand_des">左手持含当日日期与手写「阅」字的纸条，右手持身份证的照片，人物与证件图像为同一人。</string>
    <string name="passport_hand_des">左手持含当日日期与手写「阅」字的纸条，右手持护照的照片，人物与证件图像为同一人。</string>
    <string name="upload_right">标准拍摄</string>
    <string name="upload_error_tip1">边框缺失</string>
    <string name="upload_error_tip2">照片模糊</string>
    <string name="upload_error_tip3">闪光强烈</string>
    <string name="upload_file_success">图片上传成功</string>
    <string name="upload_photo_submit">提交</string>
    <string name="real_name_upload_status_certified_success">实名认证申请提交成功</string>
    <string name="real_name_upload_certified_tip">实名认证一般需要1~3天的审核时间，还请耐心等待</string>
    <string name="know_it">我知道了</string>
    <string name="ruletext1">赏金猎人活动规则</string>
    <string name="ruletext2">1.每场赏金池将于当天零点更新，赏金池中的阅点数量在当日内恒定;\n2.赏金池所得阅点第二天实时公开结算;\n3.赏金将会按照作品算力在结算日奖励给作家;\n4.打赏行为一经确认将无法撤回，请参与人理性把控;\n5.最终解释权归连载神器所有;</string>
    <string name="thankreward">感谢您的打赏</string>
    <string name="yourreward">您的赏金将会根据作品算力按比例奖励给作家</string>
    <string name="continuereward">继续打赏</string>
    <string name="returnbt">回到连载神器</string>
    <string name="can_not_open_chat_room_title">抱歉，您还没有开通聊天室的资格</string>
    <string name="can_not_open_chat_room_description">阅读该小说时长需要>%1$s分钟，才能获得开通聊天室的资格。\n您的当前阅读时长: %2$s </string>
    <string name="open_chat_room_confirm_title">您要开通该连载号的聊天室么？</string>
    <string name="open_chat_room_confirm_description">阅读该小说时长>30分钟，已获得开通聊天室的资格。\n该操作需要支付 100 阅券\n您将获得：\n• 成为该聊天室首任管理员，拥有第一周的管理权限\n• 作为开启者被记入该连载号的里程碑中，永久保留荣誉</string>
    <string name="open_confirm">我要开通</string>
</resources>