<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/normal_text_color"
        android:textSize="@dimen/text_size_28"
        android:text="@string/thankreward"
        android:layout_marginTop="36dp"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/third_text_color"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/yourreward"
                    android:layout_marginTop="15dp"/>


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/pay_success_bg"
        android:scaleType="centerInside"/>




        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>



        <TextView
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/sure_btn"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/continuereward"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/text_size_16"
            />

    <TextView
        android:id="@+id/return_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/shape_blue_yuanjiaobiankuang"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/returnbt"
        android:textColor="@color/bluetext_color"
        android:textSize="@dimen/text_size_16"
        />

</LinearLayout>