<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/StatusBarTintStyle"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <RelativeLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/v2_blue_color"
        >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/back_icon_size"
            android:layout_height="@dimen/back_icon_size"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/v2_icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="实名认证"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            />


    </RelativeLayout>


    <TextView
            android:id="@+id/tv_real_name_auth_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:alpha="0.6"
            android:text="@string/real_name_certified_tip"
            android:textColor="@color/normal_text_color"
            android:textSize="@dimen/normal_text_size" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/white_corner_card"
                android:gravity="left|center"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real_name"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/ed_real_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/real_name_hint"
                    android:singleLine="true"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/white_corner_card"
                android:gravity="left|center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_id_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_card"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/ed_id_card_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/id_card_hint"
                    android:singleLine="true"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_text_size" />

                <TextView android:id="@+id/tv_change"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/blue_color"
                    android:layout_marginLeft="5dp"
                    android:alpha="0.6" android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:gravity="center" android:visibility="gone"
                    android:text="@string/change_to_abroad"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>


        </LinearLayout>

        <Button android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:textAllCaps="false"
            android:background="@drawable/gradient_bg"
            android:text="@string/next_btn"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/normal_text_size" />

</LinearLayout>