<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:id="@+id/body_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/white_corner_card"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/open_chat_room_confirm_title"
            android:textColor="@color/color_black_333333"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/TextPaddingStyle"
            android:text="@string/open_chat_room_confirm_description"
            android:textColor="@color/color_black_333333"
            android:paddingLeft="10dp"
            android:textSize="@dimen/sp_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_color"
            android:layout_marginTop="18dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/open_confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                android:background="@drawable/shape_blue_leftbottomyuanjiao"/>

            <TextView
                android:id="@+id/tv_nomore"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/normal_text_color"
                android:textSize="@dimen/normal_text_size"
                />



        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
