<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bg_click"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/join_rule_bg"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        >
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="34dp"
                android:textColor="@color/bounty_graytext_color2"
                android:textSize="@dimen/text_size_18"
                android:text="@string/ruletext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="23dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/bounty_graytext_color2"
            android:textSize="@dimen/text_size_15"
            android:text="@string/ruletext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"/>




        <TextView
            android:id="@+id/tv_options"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/join_rule_iknow"
            android:gravity="center"
            android:text="@string/know_it"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            />


    </LinearLayout>

</RelativeLayout>