<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_text_color"
    android:gravity="bottom"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_corner_card"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/select_photo"
            android:textColor="@color/normal_text_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="@color/line_bg" />

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/take_photo"
            android:textColor="@color/normal_text_color"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="@color/line_bg" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_round_white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:text="@string/cancel_btn"
        android:textColor="@color/darker_gray"
        android:textSize="16sp" />

</LinearLayout>