<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp" android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/white_corner_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="5dp" android:paddingBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:background="@drawable/item_white_selector"
            android:clickable="true"
            android:text="@string/select_photo"
            android:textColor="@color/normal_text_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="@color/line_bg" />

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/take_photo"
            android:background="@drawable/item_white_selector"
            android:clickable="true"
            android:textColor="@color/normal_text_color"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="@color/line_bg" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/item_white_selector"
        android:clickable="true"
        android:padding="15dp"
        android:text="@string/cancel_btn"
        android:textColor="@color/third_text_color"
        android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>

