<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/StatusBarTintStyle"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/v2_blue_color"
        >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/back_icon_size"
            android:layout_height="@dimen/back_icon_size"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/v2_icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="实名认证"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            />


    </RelativeLayout>


    <LinearLayout
        android:layout_centerInParent="true" android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content" android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView android:id="@+id/iv_auth_status"
            android:src="@mipmap/verified_processing_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/tv_auth_message" android:text="@string/real_name_upload_status_certified_success"
            android:layout_width="wrap_content" android:padding="10dp"
            android:textSize="@dimen/text_size_18" android:layout_marginTop="15dp"
            android:textColor="@color/normal_text_color"
            android:layout_height="wrap_content" />

        <TextView android:text="@string/real_name_upload_certified_tip"
            android:textColor="@color/normal_text_color" android:layout_marginTop="15dp"
            android:layout_width="wrap_content" android:padding="10dp"
            android:textSize="@dimen/small_text_size"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/btn_know_it"
            android:textAllCaps="false"
            android:text="@string/know_it" android:layout_marginLeft="20dp" android:layout_marginRight="10dp"
            android:layout_width="match_parent" android:layout_marginTop="50dp"
            android:textColor="@color/white_text_color"
            android:layout_height="50dp" android:background="@drawable/gradient_bg" />
    </LinearLayout>
</RelativeLayout>
